@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190213"
-#define public MagickPackageReleaseDate "snapshot-20190213"
+#define public MagickPackageVersionAddendum ".020190215"
+#define public MagickPackageReleaseDate "snapshot-20190215"
