@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2019-02-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/jpeg.c (ReadJPEGImage): Base test for &quot;Unreasonable
+dimensions&quot; on original JPEG dimensions and not the scaled
+dimensions.  Fixes SourceForge issue 593 &quot;gm convert: Insufficient
+image data in file when hinting input image&quot;.</li>
+</ul>
+</blockquote>
 <p>2019-02-13  Troy Patteson  &lt;<a class="reference external" href="mailto:troyp&#37;&#52;&#48;ieee&#46;org">troyp<span>&#64;</span>ieee<span>&#46;</span>org</a>&gt;</p>
 <blockquote>
 <ul class="simple">
